# xCAPTCHA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/captcha_view/: CMakeLists.txt  main.cpp
config/: demo.yaml
include/: answer.h  captcha.h  captcha_api.h  captcha_config.h  captcha_context.h  image.h  processor_plugin_interface.h
include/config/: config.h  config_define.h  config_path.h  declaration.h  impl.h  iterator.h  rules.h  utils.h
include/config/detail/: basic.h  config.h  declaration.h  exception.h  impl.h  iterator.h  ref.h  serializer.h  typed_constructor.h  utils.h  value_type.h
plugins/background/: CMakeLists.txt  background_plugin.cpp  background_plugin.h
plugins/click_captcha/: CMakeLists.txt  click_captcha.cpp  click_captcha.h
plugins/deformation/: CMakeLists.txt  deformation_plugin.cpp  deformation_plugin.h  distortion_plugin.cpp
plugins/distortion/: CMakeLists.txt  distortion_plugin.h
plugins/filling/: CMakeLists.txt  filling_plugin.cpp  filling_plugin.h
plugins/noise/: CMakeLists.txt  noise_plugin.cpp  noise_plugin.h
plugins/write_redis/: CMakeLists.txt  write_redis_plugin.cpp  write_redis_plugin.h
src/: CMakeLists.txt  answer.cpp  captcha.cpp  captcha_api.cpp  captcha_config.cpp  captcha_context.cpp  captcha_plugin_stub.cpp  captcha_plugin_stub.h  charset.h  image.cpp
src/deformation/: image_deformation_mls.cpp  image_deformation_mls.h
src/deformation/engine/: delaunay.h  id_engine_affine.cpp  id_engine_affine.h  id_engine_grid.cpp  id_engine_grid.h  id_engine_rigid.cpp  id_engine_rigid.h  id_engine_similarity.cpp  id_engine_similarity.h  image_deformation_engine.h  imgwarp_piecewiseaffine.cpp  imgwarp_piecewiseaffine.h
src/exception/: exception.h
src/extension/: cv_font_text.cpp  cv_font_text.h
src/plugins/filling/: CMakeLists.txt  filling_plugin.cpp  filling_plugin.h
tools/: main.cpp
